added list of symbols

--- a/tex_files/chapter-analysis.tex
+++ b/tex_files/chapter-analysis.tex
@@ -77,7 +77,7 @@ The actual expression of the prior is given by
 \begin{equation}
     \pi\left(\tau\right)=\frac{\lambda}{2}\tau^{-3/2}\exp\left(-\lambda\tau^{-1/2}\right),\hspace{10pt}\tau>0.
 \end{equation}
-Here, $\lambda=\frac{-\log\left(\alpha\right)}{U}$ \cite{simpson2017penalising}.
+Here, $\lambda=\frac{-\log\left(\alpha\right)}{U}$ \cite{martins2014penalising}.
 For the parameters $\sigma_0$ and $\alpha$, the values 1 and 0.01 were chosen. \\
 The models were compared using the mean absolute error. For this, 20\% of the observations were removed from the training and used for testing instead. The predicted number of infections for these municipalities was then compared to the actual numbers.
 \\
